# polynomialFormUncertaintyPropagation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  cmake_install.cmake  polynomialFormUncertaintyPropagation  polynomialFormUncertaintyPropagation.cbp  readme.txt
cmake-includes/: FindMPFI.cmake
data/: obsy.txt  obsy_LaubLoomis.txt  obsy_ebola_i.txt  obsy_ebola_s.txt  obsy_honeybee_x.txt  obsy_neuron.txt  obsy_neuronP3.txt  obsy_p53.txt
matlab/: ELBO_hist.m  ELBO_hist_generalFactor.m  ELBO_multG.m  ELBOwithgrad.m  ELBOwithgrad_uG.m  VI_meanfield_hist.m  VI_meanfield_hist_factors.m  VI_meanfield_univariateGaussian.m  VI_multivariateGaussian.m  approxGaussian.m  readLogP.m
matlab/ModelParamerter/: parameterSetting_LaubLoomis.m  parameterSetting_ebola.m  parameterSetting_honeybee.m  parameterSetting_neuronmodel.m  parameterSetting_p53.m
outputs/: plot_2d.m
src/: DistributionInfo.hh  ExprAST.cpp  ExprAST.hh  ModelParser.cpp  ModelParser.hh  MpfiWrapper.cpp  MpfiWrapper.hh  MultivariatePoly.cpp  MultivariatePoly.hh  PolynomialFunctions.cpp  PolynomialFunctions.hh  ProbabilityQueryEvaluator.cpp  ProbabilityQueryEvaluator.hh  Queries.hh  StateAbstraction.hh  SystemDescription.cpp  SystemDescription.hh  cartPoleBalanceModel.cpp  inference.cpp  inference.h  libsetup.cpp  main copy.cpp  main.cpp  modelLexer.lex  modelParser.yacc  rimlessWheelModel.cpp  roboticArmModel.cpp  simpleTests.cpp  truncatedNormalCode.cpp  truncatedNormalCode.hh
src/affineForms/: AffineArithmeticEvaluate.cpp  AffineArithmeticEvaluate.hh  aaEnvironment.cpp  affineArithmeticClass.cpp  affineArithmeticClass.hpp  utilities.cpp  utilities.hpp
test/: 1d-lattice-10.sys  LaubLoomis-with-params.sys  cartpole.sys  coupledVanderPolOscillators-3.sys  ct-model.sys  ebola-model.sys  ebola-with-params copy.sys  ebola-with-params.sys  honeybee-with-params.sys  honeybee.sys  laub-loomis.sys  neuronmodel-p3.sys  neuronmodel.sys  neuronmodel_center.sys  p53-model.sys  rimlessWheel.m  test1.m  test1.sys  test2.m  test2.sys
test/python-simulation/: 1dLattice10.py  cartpole.py  coupledVanderPolOscillators-3.py  ebola-model.py  honebee.py  honeybee.py  laub-loomis.py  p53-model.py  rimlessWheel.py  roboticArm.py
